--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
     "react-native-bounceable": "^0.2.1",
+    "react-native-grid-component": "^1.0.7",
     "react-native-vector-icons": "^4.4.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
