--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/react-native-read-more-text": "^1.1.0",
     "deep-equal": "^1.0.1",
     "expo": "^21.0.0",
     "react": "16.0.0-alpha.12",
