--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "eslint-plugin-react": "^7.4.0",
     "jest-expo": "^21.0.2",
     "react-native-scripts": "1.5.0",
     "react-test-renderer": "16.0.0-alpha.12"
@@ -21,7 +22,9 @@
   "dependencies": {
     "@expo/react-native-read-more-text": "^1.1.0",
     "deep-equal": "^1.0.1",
+    "eslint": "^4.9.0",
     "expo": "^21.0.0",
+    "prop-types": "^15.6.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.48.4",
     "react-native-bounceable": "^0.2.1",
