--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@expo/react-native-read-more-text": "^1.1.0",
     "deep-equal": "^1.0.1",
     "eslint": "^4.9.0",
+    "expect": "^21.2.1",
     "expo": "^21.0.0",
     "prop-types": "^15.6.0",
     "react": "16.0.0-alpha.12",
@@ -34,6 +35,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-testkit": "^1.0.6",
     "redux-thunk": "^2.2.0"
   }
 }
